# fluid_sim_dealii

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  compile_commands.json  main.cc  plot.py  temp
example/2D/navier_stokes/: params.prm
example/2D/stokes/: params.prm
example/3D/navier_stokes/: params.prm  params_stenosis.prm
example/3D/stokes/: params.prm
example/demo/: params.prm
example/demo/bcs/: bc.h5
example/make_bc/: bc_ns.py  bc_ns_from_data.py  bc_stokes.py  make_bc.py
example/navier_stokes/: params.prm  params_aneurysm.prm
example/stokes/: params.prm
mesh/: aneurysm.msh  cavity.msh  straight_tube.msh  test.msh  test_merged.msh  test_volume.msh
mesh/2D/aneurysmA/: aneurysmA.msh
mesh/2D/aneurysmB/: aneurysmB.msh
mesh/2D/aneurysmC/: aneurysmC.msh
mesh/2D/aneurysmD/: aneurysmD.msh
mesh/2D/bend_tube/: bend_tube_extended.msh  bend_tube_extended_scaled.msh  bend_tube_level0.msh  bend_tube_level1.msh  bend_tube_level2.msh  bend_tube_level3.msh
mesh/2D/bendtubeA/: bendtubeA.msh
mesh/2D/bendtubeB/: bendtubeB.msh
mesh/2D/bendtubeC/: bendtubeC.msh
script/: build.sh  build_asus.sh
script/remote/balthasar210/: build.sh  remote.conf
script/remote/casper010/: build.sh  pull.sh  remote.conf  run.sh
script/remote/macpro/: build.sh  pull.sh  push.sh  remote.conf  run.sh
src/app/: CMakeLists.txt
src/app/navier_stokes/: CMakeLists.txt  main.cc
src/app/stokes/: CMakeLists.txt  main.cc
src/lib/forward/: boundary_conditions.h  navier_stokes.h  navier_stokes_gls.h  pde_base.h  stokes.h  stokes_problem.h  stokes_pspg.h  test.h
src/lib/utils/: input_hdf5.h  (+7 more)
(+105 files in other folders)
